# mcp-documentation-scraper

./: .coverage  .env.example  LICENSE  README.md  documents.db  pyproject.toml  requirements.txt  start_server.py  storyTracker.md  test_server.py
.github/instructions/: copilot-intructions.md
cache/: document_index.json  local_cache.json
src/: server.py
src/cache/: database.py  local_cache.py
src/indexer/: document_indexer.py  search_engine.py
src/models/: document.py
src/scraper/: content_parser.py  web_scraper.py
src/tools/: __init__.py  base_tool.py  indexing_tool.py  scraping_tool.py  search_tool.py
src/utils/: config.py
tests/: test_cache.py  test_indexer.py  test_scraper.py  test_tools.py
