[tool.poetry]
name = "mcp-doc-scraper"
version = "0.1.0"
description = "A server for scraping documentation from help articles, indexing them, and caching locally."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
sqlite3 = "*"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.0"
trafilatura = "^1.6.0"
diskcache = "^5.4.0"
whoosh = "^2.7.4"
lxml = "^4.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"